<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">
    <!--
    This opens a window to create a new memory
     -->
    <Button
            android:text="@string/create_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createMemoryBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="128dp" app:layout_constraintTop_toTopOf="parent"
            android:onClick="launchAddEditMemoryActivity"/>
    <!--
    This opens the list of memories in a recyclerview
     -->
    <Button
            android:text="@string/memories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/findMemoryBtn" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/createMemoryBtn" app:layout_constraintHorizontal_bias="0.498"
            android:onClick="launchMemoryListActivity"/>
    <!--
    This opens an activity that shows the quote of the day
     -->
    <Button
            android:text="@string/quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quoteBtn" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/findMemoryBtn" app:layout_constraintHorizontal_bias="0.498"
            android:onClick="launchQuoteActivity"/>
</androidx.constraintlayout.widget.ConstraintLayout>